compiler/typ/tests/fixtures/diagnostics/0950_gadt_pair_constructor_payload_mismatch_09.ml
type _ pair_box_iota =
  | Pair_iota : int * bool -> (int * bool) pair_box_iota
  | Swap_iota : bool * int -> (bool * int) pair_box_iota

let _ : (int * bool) pair_box_iota = Pair_iota (true, 8)
